--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <!-- Style dependencies -->
-    <link href="static/css/simple-grid.css" rel="stylesheet" />
+    <link href="/static/css/simple-grid.css" rel="stylesheet" />
     <link href="https://unpkg.com/normalize.css@^7.0.0" rel="stylesheet" />
     <!-- Blueprint stylesheets -->
     <link href="https://unpkg.com/@blueprintjs/icons@^3.4.0/lib/css/blueprint-icons.css" rel="stylesheet" />
