Add print support

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,8 @@
     <!-- Blueprint stylesheets -->
     <link href="https://unpkg.com/@blueprintjs/icons@^3.4.0/lib/css/blueprint-icons.css" rel="stylesheet" />
     <link href="https://unpkg.com/@blueprintjs/core@^3.10.0/lib/css/blueprint.css" rel="stylesheet" />
+    <!-- print media -->
+    <link href="/static/css/print.css" rel="stylesheet" />
 
     <title>ScriptEngine</title>
   </head>
