--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     -->
     <!-- Style dependencies -->
     <link href="/static/css/simple-grid.css" rel="stylesheet" />
+    <link href="/static/css/scripting.css" rel="stylesheet" />
     <link href="https://unpkg.com/normalize.css@^7.0.0" rel="stylesheet" />
     <!-- Blueprint stylesheets -->
     <link href="https://unpkg.com/@blueprintjs/icons@^3.4.0/lib/css/blueprint-icons.css" rel="stylesheet" />
