Fixes for deploying to a subdirectory

--- a/public/index.html
+++ b/public/index.html
@@ -20,14 +20,14 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <!-- Style dependencies -->
-    <link href="/static/css/simple-grid.css" rel="stylesheet" />
-    <link href="/static/css/scripting.css" rel="stylesheet" />
+    <link href="%PUBLIC_URL%/static/css/simple-grid.css" rel="stylesheet" />
+    <link href="%PUBLIC_URL%/static/css/scripting.css" rel="stylesheet" />
     <link href="https://unpkg.com/normalize.css@^7.0.0" rel="stylesheet" />
     <!-- Blueprint stylesheets -->
     <link href="https://unpkg.com/@blueprintjs/icons@^3.4.0/lib/css/blueprint-icons.css" rel="stylesheet" />
     <link href="https://unpkg.com/@blueprintjs/core@^3.10.0/lib/css/blueprint.css" rel="stylesheet" />
     <!-- print media -->
-    <link href="/static/css/print.css" rel="stylesheet" />
+    <link href="%PUBLIC_URL%/static/css/print.css" rel="stylesheet" />
 
     <title>ScriptEngine</title>
   </head>
